--- a/src/css/abstracts/_mixins.scss
+++ b/src/css/abstracts/_mixins.scss
@@ -154,3 +154,14 @@ $breakpoints: (
         @content;
     }
 }
+
+
+@mixin animate($animation,$duration, $method){
+    animation: $animation $duration $method;
+}
+
+@mixin keyframes($name){
+    @keyframes #{$name}{
+        @content;
+    }
+}
