Only change in dashboard css -- DevVinay

--- a/src/css/dashboard.scss
+++ b/src/css/dashboard.scss
@@ -2093,6 +2093,9 @@ button.refeshBtn {
 
             ul {
                 padding-top: 20px;
+                overflow-y: scroll;
+                height: 85vh;
+                // padding-bottom: 50px;
 
                 li {
 
