--- a/src/css/base/_typography.scss
+++ b/src/css/base/_typography.scss
@@ -46,7 +46,7 @@ body {
 p {
 	font-family: $font-family-base;
 	margin-top: 0;
-	margin-bottom: $baseline;
+	margin-bottom: $baseline - 6;
 }
 
 /**
