--- a/src/css/dashboard.scss
+++ b/src/css/dashboard.scss
@@ -1951,8 +1951,8 @@ button.refeshBtn {
 .report {
     #sidebar-wrapper {
         width: 220px;
-        overflow-y: auto;
-        background: $border-sec-color;
+        overflow-y: hidden;
+        background: $icon_bg_color;
         position: absolute;
         z-index: 10;
         height: 100%;
@@ -1982,8 +1982,8 @@ button.refeshBtn {
 
     .sidebar-nav li a:hover {
         text-decoration: none;
-        color: $color-text;
-        background: rgba(255, 255, 255, 0.2);
+        color: $color-white;
+        background: $theme-color;
     }
 
     .sidebar-nav li a:active,
@@ -2021,6 +2021,22 @@ button.refeshBtn {
         margin-right: 15px;
         color: $theme-color
     }
+    // .active{
+    //     color: $color-white;
+    //     background-color: $theme-color;
+    // }
+    @include sm {
+        .addtab #left-tabs-example-tab-first {
+            border-top-right-radius: 7px !important;
+            border-bottom-right-radius: 7px !important;
+        }
+        .addtab #left-tabs-example-tab-second {
+            border-top-left-radius: 7px !important;
+            border-bottom-left-radius: 7px !important;
+            margin-top: 10px;
+        }
+    }
+
 }
 
 .mobileSideBar {
@@ -2053,13 +2069,8 @@ button.refeshBtn {
                 100% {
                     transform: translateX(-30%);
                 }
-
-                //   100% {
-                //     transform: translateX(40%);
-                //   }
             }
 
-            //   animation: slide-in 1000ms;
             @include animate(slide-in, 2000ms, infinite);
         }
     }
