--- a/src/css/dashboard.scss
+++ b/src/css/dashboard.scss
@@ -1013,6 +1013,9 @@ button#controlled-tab-example-tab-Manual-1 {
         padding: 3px 5px;
         font-size: 15px;
         box-shadow: none !important;
+        @include md{
+            top: 8px;
+        }
     }
 }
 
