--- a/src/css/utility/_button.scss
+++ b/src/css/utility/_button.scss
@@ -1,7 +1,8 @@
 button {
     &.btn {
-        height: 34px;
+        height: 35px;
         display: inline-block;
+        line-height: 1;
         
 
         &.btn-primary {
