--- a/src/css/dashboard.scss
+++ b/src/css/dashboard.scss
@@ -29,7 +29,7 @@ body {
     }
 }
 
-.layoutContentScroll{
+.layoutContentScroll {
     overflow-y: hidden !important;
 }
 
@@ -1916,7 +1916,7 @@ button.refeshBtn {
 
     #left-tabs-example-tab-first .nav-link,
     #left-tabs-example-tab-second .nav-link {
-        color: $theme-color!important;
+        color: $theme-color !important;
     }
 
     #left-tabs-example-tab-first {
@@ -2022,6 +2022,7 @@ button.refeshBtn {
         margin-right: 15px;
         color: $theme-color
     }
+
     // .active{
     //     color: $color-white;
     //     background-color: $theme-color;
@@ -2031,6 +2032,7 @@ button.refeshBtn {
             border-top-right-radius: 7px !important;
             border-bottom-right-radius: 7px !important;
         }
+
         .addtab #left-tabs-example-tab-second {
             border-top-left-radius: 7px !important;
             border-bottom-left-radius: 7px !important;
@@ -2137,5 +2139,50 @@ button.refeshBtn {
         .mSBLogo {
             width: 140px;
         }
+    }
+}
+
+// ----------------------------Tracking_Ad--------------
+
+
+.edit_tracking {
+
+    .nav.nav-pills {
+        width: 100%;
+        border: 1px solid #0b76c9;
+        padding: 10px;
+        border-radius: 30px;
+
+        .nav-item {
+            width: 33.33%;
+            border-radius: 30px;
+            text-align: center; 
+        }
+
+        .nav-link {
+            height: 40px;
+            justify-content: center;
+            display: flex;
+            align-items: center;
+            border-radius: 30px;
+        }
+    }
+
+    .nav-pills .nav-link.active,
+    .nav-pills .show>.nav-link {
+        color: var(--bs-nav-pills-link-active-color);
+        background-color: $theme-color;
+        border-radius: 25px;
+        box-shadow: 0px 0px 10px 0px #4b4b4b3d;
+    }
+    .icon-add {
+        font-size: 25px;
+        color: #0b76c9;
+        margin-top: 5px;
+    }
+    .icon-minus {
+        font-size: 25px;
+        color: #FF6B6B;
+        margin-top: 5px;
     }
 }
