Tracking pixel and payout tab design in Tracking_Ad.js

--- a/src/css/dashboard.scss
+++ b/src/css/dashboard.scss
@@ -2188,4 +2188,9 @@ button.refeshBtn {
         color: #FF6B6B;
         margin-top: 5px;
     }
+    .pixel_boder{
+        border: 1px solid #ccc;
+        border-radius: 7px;
+        padding: 15px;
+    }
 }
