--- a/src/css/fulfillment/fulfillment.scss
+++ b/src/css/fulfillment/fulfillment.scss
@@ -5,12 +5,52 @@
 
 
 
-.fulFillmentSection{
-    .bg_col {
+.fulFillmentSection {
+    padding: 16px;
+
+
+    .cus-fulfillment-row {
         background-color: $color-white;
-        padding: 7px;
         box-shadow: 0px 0px 3px rgb(0 0 0 / 25%);
         border-radius: 7px;
+        padding: 10px;
+        width: 100%;
+        margin: 0 auto;
+
+        .cus-fftheader-col {
+            padding-left: 0 !important;
+            padding-right: 0 !important;
+        }
+
+        .cus-fftable-col {
+            padding-left: 0 !important;
+            padding-right: 0 !important;
+
+            .cus-os-td {
+                padding: 12px 0px;
+
+                .cus-ffos-row {
+                    width: 100%;
+                    // margin: 0 auto;
+
+                    @include xl-b-xxl {
+                        margin: 0 auto;
+                    }
+
+                    @include xl-xxl {
+                        width: calc(100vw - 103px);
+                        padding-left: 10px;
+                    }
+
+                    @include md {
+                        width: calc(100vw - 23px);
+                    }
+                }
+            }
+        }
     }
 }
 
+// .cus-ffos-row{
+//     @include 
+// }
