--- a/src/css/utility/_button.scss
+++ b/src/css/utility/_button.scss
@@ -3,7 +3,7 @@ button {
         height: 35px;
         display: inline-block;
         line-height: 1;
-        
+
 
         &.btn-primary {
             background: $theme-color;
@@ -34,10 +34,12 @@ button {
         }
 
     }
-    .btn{
+
+    .btn {
         font-size: 14px !important;
     }
-    .btn-outline-blue{
+
+    .btn-outline-blue {
         background-color: $color-white;
         border-color: $theme-color;
     }
@@ -67,5 +69,22 @@ button {
         &:hover {
             background-color: #f5f5f5;
         }
+    }
+}
+
+.btn-blue-border {
+    color: $theme-color !important;
+    border-radius: 50px !important;
+    border: 1px solid $theme-color !important;
+    background-color: $color-white !important;
+}
+
+.link-green-border {
+    font-size: 20px !important;
+    border: 1px solid $btn-success !important;
+    padding: 6px 9px !important;
+    line-height: 0 !important;
+    & svg{
+        color: $btn-success !important;
     }
 }
