--- a/src/css/utility/_form.scss
+++ b/src/css/utility/_form.scss
@@ -202,7 +202,7 @@ form {
 
     & select {
         &:focus {
-            border-color: $outline-color  !important;
+            border-color: $outline-color !important;
             outline: 0;
             box-shadow: inset 0 1px 1px rgb(0 0 0 / 8%), 0 0 8px rgb(102 175 233 / 60%) !important;
         }
@@ -255,7 +255,7 @@ form {
 
     & select {
         &:focus {
-            border-color: $outline-color  !important;
+            border-color: $outline-color !important;
             outline: 0;
             box-shadow: inset 0 1px 1px rgb(0 0 0 / 8%), 0 0 8px rgb(102 175 233 / 60%) !important;
         }
@@ -327,7 +327,7 @@ form {
 .form-group {
     .accordion {
         .accordion-item {
-            border: 1px solid $border-sec-color  !important;
+            border: 1px solid $border-sec-color !important;
 
             .accordion-header {
                 button {
@@ -484,7 +484,8 @@ form {
             font-weight: 700;
             padding-left: 5px;
         }
-        .without-checkbox-label{
+
+        .without-checkbox-label {
             font-size: 13px;
             font-weight: 700;
         }
@@ -494,18 +495,25 @@ form {
         font-size: 13px;
         padding-left: 20px;
     }
-    .recomm_add{
+
+    .recomm_add {
         font-size: 13px;
     }
 }
 
-form{
-    .form-group{
-        &.cus-form{
-            label{
+form {
+    .form-group {
+        &.cus-form {
+            label {
                 pointer-events: all !important;
             }
         }
     }
-    
+
+}
+
+.form-check-input-blue {
+    .form-check-input {
+        border-color: $theme-color !important;
+    }
 }
