--- a/src/css/fulfillment/fulfillment.scss
+++ b/src/css/fulfillment/fulfillment.scss
@@ -45,6 +45,34 @@
                     @include md {
                         width: calc(100vw - 23px);
                     }
+
+                    .fforderStatusDate {
+                        display: flex;
+                        padding-bottom: 15px;
+
+                        & .ffOrderStatus {
+                            min-width: 150px;
+                            font-weight: 600;
+                        }
+                    }
+
+                    .fforderSlipSec {
+                        display: inline-flex;
+                        flex-direction: column;
+
+                        & .ffOrderSlip {
+                            background: #0b76c929;
+                            margin-bottom: 7px;
+                            padding: 5px 15px;
+                            border-radius: 50px;
+                        }
+                        & .ffOrderAddNote{
+                            background: #00800040;
+                            color: #008000;
+                            padding: 5px 15px;
+                            border-radius: 50px;
+                        }
+                    }
                 }
             }
         }
