--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -392,7 +392,7 @@ accordion-header {
     cursor: pointer;
     text-align: center;
     border: none;
-    padding: 8px 10px;
+    padding: 10px 10px;
     background-size: 300% 100%;
     border-radius: 50px;
     -o-transition: all .2s ease-in-out;
@@ -1664,13 +1664,13 @@ button.refeshBtn {
 }
 
 .btn-icon {
-    min-width: 30px;
+    min-width: 38px;
     font-size: 14px;
     color: $color-white;
     cursor: pointer;
     text-align: center;
     border: none;
-    padding: 7px 10px;
+    padding: 10px 10px;
     background-size: 300% 100%;
     border-radius: 7px;
     transition: all 0.2s ease-in-out;
@@ -1791,58 +1791,12 @@ button.refeshBtn {
 }
 
 // ------------------------Tab
-.inventory_tab {
-    .nav-item {
-        padding: 0 6px;
-        position: relative;
-    }
 
-    .custom_tab {
-        width: 165px;
-        display: inherit;
-        text-align: center;
-        padding: 10px !important;
-        list-style: none;
-        text-align: center;
-        cursor: pointer;
-        transition: all 0.7s;
-        color: #666666 !important;
-        background: $color-white;
-        border: 1px solid #CCCCCC !important;
-        border-radius: 10px !important;
-        text-decoration: none;
-    }
-
-    .custom_tab.active {
-        background-color: $theme-color !important;
-        color: $color-white !important;
-        border-radius: 10px;
-        padding: 10px;
-    }
-
-    .back-btn {
-        margin-top: 24px;
-        font-size: $font-size-base-px + 9;
-        color: green;
-    }
-
-    .custom_tab.active::after {
-        position: absolute;
-        content: "";
-        top: 40px;
-        left: 50%;
-        width: 0;
-        height: 0;
-        border-left: 7px solid transparent;
-        border-right: 7px solid transparent;
-        border-top: 11px solid $theme-color;
-    }
-}
 
 .inputIcon {
     content: "$";
     position: absolute;
-    top: 7px;
+    top: 9px;
     right: 10px;
     font-size: $font-size-base-px + 6;
     color: #717171;
@@ -1855,30 +1809,6 @@ button.refeshBtn {
     font-size: $font-size-base-px - 4;
     z-index: 1;
     background: $color-white;
-}
-
-.contact_inner {
-
-    .nav-tabs {
-        border-bottom: unset;
-
-        #noanim-tab-example-tab-Email {
-            border-top-right-radius: 0 !important;
-            border: 1px solid $theme-color !important;
-            border-bottom-left-radius: 6px;
-        }
-
-        #noanim-tab-example-tab-Task {
-            border-top-left-radius: 0 !important;
-            border-bottom-right-radius: 6px !important;
-            border: 1px solid $theme-color !important;
-        }
-
-        .nav-link.active {
-            background-color: $darl_blue !important;
-            color: $color-white;
-        }
-    }
 }
 
 .rti--container {
@@ -1903,42 +1833,7 @@ button.refeshBtn {
     box-shadow: inset 0 1px 1px rgb(0 0 0 / 8%), 0 0 8px rgb(102 175 233 / 60%) !important;
 }
 
-.product_details {
-    .accordion-flush .accordion-item .accordion-button {
-        border-radius: 0 !important;
-    }
-}
-
-.port_lookup {
-    .strick {
-        color: $dark_red;
-    }
-}
-
-.addtab {
-    .nav-pills .nav-link.active {
-        background-color: $darl_blue !important;
-        color: $color-white !important;
-    }
-
-    #left-tabs-example-tab-first .nav-link,
-    #left-tabs-example-tab-second .nav-link {
-        color: $theme-color !important;
-    }
-
-    #left-tabs-example-tab-first {
-        border: 1px solid $theme-color;
-        border-top-right-radius: 0;
-        border-bottom-right-radius: 0;
-    }
-
-    #left-tabs-example-tab-second {
-        border: 1px solid $theme-color;
-        border-top-left-radius: 0;
-        border-bottom-left-radius: 0;
-
-    }
-}
+// --------------------fulfillment
 
 .fulfillment {
 
@@ -1956,99 +1851,9 @@ button.refeshBtn {
     }
 }
 
-.report {
-    #sidebar-wrapper {
-        width: 220px;
-        overflow-y: hidden;
-        background: $icon_bg_color;
-        position: absolute;
-        z-index: 10;
-        height: 100%;
-        transition: left 0.5s;
 
-    }
 
-    .sidebar-nav {
-        padding-left: 0px;
-    }
-
-    div#page-content-wrapper {
-        margin-left: 220px;
-        transition: all 0.5s;
-    }
-
-    .sidebar-nav li {
-        text-indent: 20px;
-        line-height: 40px;
-    }
-
-    .sidebar-nav li a {
-        display: block;
-        text-decoration: none;
-        color: $color-text;
-    }
-
-    .sidebar-nav li a:hover {
-        text-decoration: none;
-        color: $color-white;
-        background: $theme-color;
-    }
-
-    .sidebar-nav li a:active,
-    .sidebar-nav li a:focus {
-        text-decoration: none;
-    }
-
-    sidebar-nav li a:active,
-    .sidebar-nav li a:focus {
-        text-decoration: none;
-    }
-
-    .sidebar-nav>.sidebar-brand {
-        height: 65px;
-        font-size: $font-size-base-px + 2;
-        line-height: 60px;
-    }
-
-    .sidebar-nav>.sidebar-brand a {
-        color: $color-text !important;
-    }
-
-    .sidebar-nav>.sidebar-brand a:hover {
-        color: $color-text;
-        background: none;
-    }
-
-    .addtab {
-        position: relative;
-        overflow: hidden;
-    }
-
-    .baricon {
-        font-size: $font-size-base-px + 14;
-        margin-right: 15px;
-        color: $theme-color
-    }
-
-    // .active{
-    //     color: $color-white;
-    //     background-color: $theme-color;
-    // }
-    @include sm {
-        .addtab #left-tabs-example-tab-first {
-            border-top-right-radius: 7px !important;
-            border-bottom-right-radius: 7px !important;
-        }
-
-        .addtab #left-tabs-example-tab-second {
-            border-top-left-radius: 7px !important;
-            border-bottom-left-radius: 7px !important;
-            margin-top: 10px;
-        }
-    }
-
-}
-
+// ---------------------Mobile sidebar------------
 .mobileSideBar {
     @include md-b {
         display: none;
@@ -2148,58 +1953,3 @@ button.refeshBtn {
         }
     }
 }
-
-// ----------------------------Tracking_Ad--------------
-
-
-.edit_tracking {
-
-    .nav.nav-pills {
-        width: 100%;
-        border: 1px solid #0b76c9;
-        padding: 10px;
-        border-radius: 30px;
-
-        .nav-item {
-            width: 33.33%;
-            border-radius: 30px;
-            text-align: center;
-        }
-
-        .nav-link {
-            height: 40px;
-            justify-content: center;
-            display: flex;
-            align-items: center;
-            border-radius: 30px;
-        }
-    }
-
-    .nav-pills .nav-link.active,
-    .nav-pills .show>.nav-link {
-        color: var(--bs-nav-pills-link-active-color);
-        background-color: $theme-color;
-        border-radius: 25px;
-        box-shadow: 0px 0px 10px 0px #4b4b4b3d;
-    }
-
-    .icon-add {
-        font-size: 25px;
-        color: #0b76c9;
-        margin-top: 5px;
-    }
-
-    .icon-minus {
-        font-size: 25px;
-        color: #FF6B6B;
-        margin-top: 5px;
-    }
-
-    .pixel_boder {
-        border: 1px solid #ccc;
-        border-radius: 7px;
-        padding: 15px;
-    }
-}
-
-// -----------------------Dashboard
