chagne mobile sidebar and and also work in fulfillment --  DevVinay

--- a/src/css/fulfillment/fulfillment.scss
+++ b/src/css/fulfillment/fulfillment.scss
@@ -90,8 +90,16 @@
 
                         .addressVerifySec {
                             padding: 10px 0px 0px 0px;
-                            text-align: right;
-                            font-weight: 700;
+                            display: flex;
+                            justify-content: space-between;
+                            align-items: start;
+
+                            .ffShipAddSec {
+                                .ffShipAdd {
+                                    display: flex;
+                                    flex-direction: column;
+                                }
+                            }
 
                             & a {
                                 display: flex;
