--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1343,7 +1343,7 @@ span.icon-suffix {
         min-width: 150px;
         text-align: center;
         display: flow-root;
-        
+
     }
 
     a.active {
@@ -1890,66 +1890,115 @@ button.refeshBtn {
         }
     }
 
-    .mobileSideBarMenu {
-        position: absolute;
+    // .mobileSideBarMenu {
+    //     position: absolute;
+    //     width: 100%;
+    //     height: 100vh;
+    //     top: 0;
+    //     background-color: #000000a6;
+    //     z-index: 9999;
+    //     transition: all 0.5s;
+
+    //     .mSBcloseIcon {
+    //         text-align: end;
+    //         color: #fff;
+    //         position: absolute;
+    //         right: 0;
+    //         padding: 5px;
+
+    //         svg {
+    //             font-size: 25px;
+    //         }
+    //     }
+
+    //     .mSBMenu {
+    //         width: 250px;
+    //         background: #0b76c9;
+    //         height: 100vh;
+    //         padding: 10px 15px;
+
+    //         ul {
+    //             padding-top: 20px;
+    //             overflow-y: scroll;
+    //             height: 85vh;
+    //             // padding-bottom: 50px;
+
+    //             li {
+
+    //                 a {
+    //                     display: flex;
+    //                     align-items: center;
+    //                     justify-content: start;
+    //                     text-decoration: none;
+    //                     color: #fff;
+    //                     padding: 8px 5px;
+    //                     margin-bottom: 5px;
+
+    //                     &:hover {
+    //                         background: #ffffff;
+    //                         border-radius: 4px;
+    //                         color: #0b76c9;
+    //                     }
+
+    //                     span {
+    //                         padding-left: 15px;
+    //                     }
+    //                 }
+    //             }
+    //         }
+    //     }
+
+    //     .mSBLogo {
+    //         width: 140px;
+    //     }
+    // }
+    .mSBMenu {
+        position: fixed;
         width: 100%;
-        height: 100vh;
         top: 0;
-        background-color: #000000a6;
-        z-index: 9999;
-        transition: all 0.5s;
+        left: -100%;
+        height: 100vh;
+        background: rgb(11, 118, 201);
+        background: linear-gradient(90deg, rgba(11, 118, 201, 1) 70%, rgba(255, 0, 0, 0) 70%);
+        z-index: 99;
+        transition: 850ms;
 
-        .mSBcloseIcon {
-            text-align: end;
-            color: #fff;
-            position: absolute;
-            right: 0;
-            padding: 5px;
-
-            svg {
-                font-size: 25px;
-            }
+        &.active {
+            left: 0;
+            transition: 350ms;
         }
 
-        .mSBMenu {
-            width: 250px;
-            background: #0b76c9;
-            height: 100vh;
-            padding: 10px 15px;
+        .mSBMenuItems {
+            padding: 10px;
+            position: relative;
 
-            ul {
-                padding-top: 20px;
-                overflow-y: scroll;
-                height: 85vh;
-                // padding-bottom: 50px;
+            .mSBLogo {
+                width: 140px;
+                margin-bottom: 20px;
+            }
 
-                li {
+            .mSBToggle {
+                position: absolute;
+                right: 0;
+                font-size: 40px;
+                top: 0;
 
-                    a {
-                        display: flex;
-                        align-items: center;
-                        justify-content: start;
-                        text-decoration: none;
-                        color: #fff;
-                        padding: 8px 5px;
-                        margin-bottom: 5px;
+                .mSBMenuBars {
+                    & svg {
+                        color: $theme-color ;
+                    }
+                }
+            }
 
-                        &:hover {
-                            background: #ffffff;
-                            border-radius: 4px;
-                            color: #0b76c9;
-                        }
-
-                        span {
-                            padding-left: 15px;
-                        }
+            .mSBNavText{
+                .mSBNavLink{
+                    color: $color-white;
+                    & span{
+                        margin-left: 10px;
                     }
                 }
             }
         }
-
-        .mSBLogo {
-            width: 140px;
-        }
     }
+
 }
