--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -13,6 +13,7 @@
             border: 1px solid $theme-color !important;
             border-bottom-left-radius: 6px  !important;
             border-top-left-radius: 6px  !important;
+            margin-right: 0px !important;
         }
 
         #noanim-tab-example-tab-Task {
