--- a/src/css/abstracts/_variables.scss
+++ b/src/css/abstracts/_variables.scss
@@ -122,7 +122,7 @@
  $granite_gray: #5a5a5a;
  $icon_bg_color: #B9DEFA;
  $placeholder: #a5a5a6;
-
+$bg-light-blue-btn:#CCE7FF;
  /**
    * Value
    * =================================
