--- a/src/components/admin/Admin.scss
+++ b/src/components/admin/Admin.scss
@@ -22,68 +22,73 @@
         color: Black !important;
         border: 1px solid black !important;
     }
-   
 
-}
-.card {
-    background-color: #FFF;
-    // width: 320px;
-    border-radius: .5rem;
-    // box-shadow: 0px 5px 20px rgba(49, 104, 146, .25);
-    .img-box{
-        
-    }
-    .card-body {
-        padding: 3.5rem 1.25rem;    
-        .card-title {
-            color: #1689ff;
-            font-size: 1.25rem;
-            font-weight: 700;
-            text-align: center;
-            margin-bottom: .25rem;
-        }
-        .card-subtitle {
-            color: #777;
-            font-weight: 500;
-            text-align: center;
+    .card {
+        background-color: #FFF;
+        border-radius: .5rem;
+       
+        .card-body {
+            padding: 3.5rem 1.25rem;    
+            .card-title {
+                color: #1689ff;
+                font-size: 1.25rem;
+                font-weight: 700;
+                text-align: center;
+                margin-bottom: .25rem;
+            }
+            .card-subtitle {
+                color: #777;
+                font-weight: 500;
+                text-align: center;
+            }
         }
     }
-}
-.file-upload {
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    padding: 4rem 1.5rem;
-    margin-top: 2rem;
-    border: 3px dashed #9dceff;
-    border-radius: .5rem;
-    transition: background-color .25s ease-out;
-
-    &:hover {
-        background-color: #dbedff;
+    .file-upload {
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        padding: 4rem 1.5rem;
+        margin-top: 2rem;
+        border: 3px dashed #9dceff;
+        border-radius: .5rem;
+        transition: background-color .25s ease-out;
+        &:hover {
+            background-color: #dbedff;
+        }
+        .file-input {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            opacity: 0;
+            outline: none;
+            cursor: pointer;
+        }
     }
-
-    .file-input {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        opacity: 0;
-        outline: none;
-        cursor: pointer;
-    }
-}
-
-.icon {
-    width: 75px;
-    margin-bottom: 1rem;
-}
-
-@media (max-width: 600px) {
     .icon {
-        width: 50px;
+        width: 75px;
+        margin-bottom: 1rem;
+    } 
+    @media (max-width: 600px) {
+        .icon {
+            width: 50px;
+        }
     }
+
+    .check-form {
+        border: 1px solid #0b76c9;
+    }
+    input.form-check-input {
+        height: 20px;
+        width: 20px;
+    }
+
 }
+
+
+// ------------Check box design----------
+
+  // ------------Check box design----------
